# dupage-election-analysis

./: .gitignore  .mega-linter.yml  README.md  elections.db  export_flags.py  generate_analysis.py  import_flags.py  load_election.py  pyproject.toml  reports.toml  review_flags.py  setup_db.py  sync_sources.py
.github/workflows/: megalinter.yml  tests.yml
dupage_elections/: analysis.py  cli.py  db.py  flags.py  loader.py  models.py  reports.py
sources/: 2014-general-primary-2018-03-18.csv  2018-general-primary-2018-04-09.csv
src/election_analysis_generator/: analysis.py  cli.py  db.py  flags.py  loader.py  models.py  normalize.py
tests/: conftest.py  test_analysis.py  test_db.py  test_loader.py  test_normalize.py  test_precinct.py  test_precinct_party_change.py  test_reports.py
